--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>presidents' words </title>
-	<meta name="description" content="typography1 2017 tiling project">
+	<meta name="description" content="presidents' words">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://hknudesign.github.io/image-type/">
-	<meta property="og:image" content="./img/thumb.jpg">
-	<meta property="og:title" content="typography1 2017 tiling project">
-	<meta property="og:description" content="typography 2017 tiling project">
+	<meta property="og:title" content="tpresidents' words">
+	<meta property="og:description" content="presidents' words">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 	<link rel='stylesheet' href='./normalize.css'>
 	<style>
